<resources>
    <string name="app_name">Synchro</string>

    <string name="connect_device">Connect Device</string>
    <string name="scan">Scan</string>
    <string name="stop_scan">Stop Scan</string>
    <string name="connect">Connect</string>
    <string name="discconcet">Disconnect</string>
    <string name="training">Training</string>
    <string name="start_tarining">Start Training</string>
    <string name="save">Save C</string>
    <string name="stop_tarining">Long Press to Stop Training</string>
    <string name="train">Train</string>
    <string name="logs">Logs</string>
    <string name="setting">Setting</string>
    <string name="clear">Clear</string>
    <string name="software_version">Software Version</string>
    <string name="app_version">App Version</string>
    <string name="device_software_version">Device\'s Software Version</string>
    <string name="device_serial_number">Device\'s Serial Number</string>
    <string name="change_name">Change Name</string>
    <string name="device_new_name">Device New Name</string>
    <string name="change">Change</string>
    <string name="freestyle_setting">Freestyle Setting</string>
    <string name="mode_setting">Mode Setting</string>
    <string name="indicative_mode">Indicative mode</string>
    <string name="dark_mode">Dark mode</string>
    <string name="report_setting">Report Setting</string>
    <string name="report_after_each_hit">Report after each hit</string>
    <string name="report_when_stopped">Report when stopped</string>
    <string name="restart">Restart</string>
    <string name="continue_">Continue</string>
    <string name="freestyle_stats">Freestyle stats</string>
    <string name="zeroing_stats">Zeroing stats</string>
    <string name="no_hits">No. Hits</string>
    <string name="avg_hit">AVG Hit</string>
    <string name="max_dist">Max Dist</string>
    <string name="reaction_setting">Reaction Setting</string>
    <string name="preparation_time">Preparation time</string>
    <string name="number_of_rounds">Number of Rounds</string>
    <string name="number_of_hits">Number of Hits</string>
    <string name="time_penalty_value">Time penalty value</string>
    <string name="start">Start</string>
    <string name="stop">Long Press to Stop</string>
    <string name="accuracy">Accuracy[cm]</string>
    <string name="accuracy_inch">Accuracy[inch]</string>
    <string name="reaction">Reaction[s]</string>
    <string name="no_round">No Round</string>
    <string name="zeroing_setting">Zeroing Setting</string>
    <string name="goal_x">Goal_X [cm]</string>
    <string name="goal_x_inch">Goal_X [inch]</string>
    <string name="goal_y">Goal_Y [cm]</string>
    <string name="goal_y_inch">Goal_Y [inch]</string>
    <string name="cali_x">Click to cm [X]</string>
    <string name="cali_x_inch">Click to inch [X]</string>
    <string name="cali_y">Click to cm [Y]</string>
    <string name="cali_y_inch">Click to inch [Y]</string>
    <string name="set">Set</string>
    <string name="remove_outlier">Remove\noutlier</string>
    <string name="horizontal_com">Horizontal\n[cm]</string>
    <string name="horizontal_com_inch">Horizontal\n[inch]</string>
    <string name="vertical_com">Vertical\n[cm]</string>
    <string name="vertical_com_inch">Vertical\n[inch]</string>
    <string name="goal">Goal</string>
    <string name="ticks">Ticks</string>
    <string name="goal_positon">Goal Pos.</string>
    <string name="dist_bw_avg_goal">Dist bw AVG to Goal</string>
    <string name="target_swiching">Target switching</string>
    <string name="width_real_life">Width (Real life)</string>
    <string name="height_real_life">Height (Real life)</string>
    <string name="horizontal_offcet">Horizontal Offset</string>
    <string name="vertical_offcet">Vertical Offset</string>
    <string name="detection_zone">Detection zone</string>
    <string name="wide_detection_zone">Wide detection zone</string>
    <string name="narrow_detection_zone">Narrow detection zone</string>

    <string name="enable_location_permission">Enable Location Permission</string>
    <string name="enable_location_setting">Enable Location</string>
    <string name="enable_storage_permission">Enable Storage Permission</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="connecting">Connecting...</string>
    <string name="scan_not_supported">Scan not supported</string>
    <string name="scan_fail">Scan fail</string>
    <string name="enable_bluetooth">Enable bluetooth</string>
    <string name="device_disconnected">Device disconnected</string>
    <string name="disconnect_confirm">Are you sure you want to disconnect this device?</string>
    <string name="pls_connect_device">No remote device connected, Please connect device.</string>
    <string name="pls_enter_c_value">Please enter c value</string>
    <string name="saved">Saved</string>
    <string name="temperature">Temperature</string>
    <string name="location_service_provider_is_not_available">Location Service Provider is not available</string>
    <string name="calculating_speed_of_sound">Calculating speed of sound..</string>
    <string name="pls_check_your_internetconnection">Please check your internet connection</string>
    <string name="pls_enter_new_name">Please enter new name</string>
    <string name="pls_wait">Please wait...</string>
    <string name="pls_enter_golax">Please enter Goal_X</string>
    <string name="pls_enter_golay">Please enter Goal_Y</string>
    <string name="pls_enter_calix">Please enter click to cm [X]</string>
    <string name="pls_enter_caliy">Please enter click to cm [Y]</string>
    <string name="pls_enter_width_reallife">Please enter width (real life)</string>
    <string name="pls_enter_height_reallife">Please enter height (real life)</string>
    <string name="pls_enter_vertical_offcet">Please enter vertical offset</string>
    <string name="pls_enter_horizontal_offcet">Please enter horizontal offset</string>
    <string name="time_penalty_validation">Time penalty value must be between 0 to 5</string>
    <string name="display_target_velocity">Display target velocity</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="units">Units</string>
    <string name="metric">Metric</string>
    <string name="standard">Standard</string>
    <string name="indoor_outdoor">Indoor/Outdoor</string>
    <string name="indoor">Indoor</string>
    <string name="outdoor">Outdoor</string>
    <string name="personal_info">Personal Info</string>
    <string name="full_name">Full name</string>
    <string name="str_save">Save</string>
    <string name="id">Id</string>
    <string name="unit">Unit</string>
    <string name="sub_unit">Sub-unit</string>
    <string name="company">Company</string>
    <string name="platoon">Platoon</string>
    <string name="pls_enter_full_name">Please enter full name</string>
    <string name="pls_enter_id">Please enter id</string>
    <string name="pls_enter_unit">Please enter unit</string>
    <string name="pls_enter_sub_unit">Please enter sub unit</string>
    <string name="pls_enter_company">Please enter company</string>
    <string name="pls_enter_platoon">Please enter platoon</string>
    <string name="personal_info_saved_successfully">Personal info saved successfully</string>
    <string name="training_report">training report</string>
    <string name="image_description">Image description</string>
    <string name="select_target_alert">There is no selected target, please choose one to start training.</string>
    <string name="loading_image">Loading image...</string>
    <string name="marker_size">Marker Size</string>
    <string name="marker_color">Marker Color</string>
    <string name="marker_shape">Marker Shape</string>
    <string name="red">Red</string>
    <string name="yellow">Yellow</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="pink">Pink</string>
    <string name="circle">Circle</string>
    <string name="rectangle">Rectangle</string>
    <string name="pentagon">Pentagon</string>
    <string name="oval">Oval</string>
    <string name="star">Star</string>
    <string name="marker_menu">Marker Menu</string>
</resources>