<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroung_color"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:elevation="5dp"
        android:fontFamily="@font/open_sans_bold"
        android:gravity="center"
        android:text="@string/setting"
        android:textColor="@color/title_color"
        android:textSize="@dimen/title_size" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_logs"
                style="@style/setting_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/logs" />

            <TextView
                android:id="@+id/tv_softwareversion"
                style="@style/setting_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/software_version" />

            <TextView
                android:id="@+id/tv_changeName"
                style="@style/setting_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_name" />

            <TextView
                android:id="@+id/tv_freeStyleSetting"
                style="@style/setting_item"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/freestyle_setting" />

            <TextView
                android:id="@+id/tv_reactionSetting"
                style="@style/setting_item"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reaction_setting" />

            <TextView
                android:id="@+id/tv_zeroingSetting"
                style="@style/setting_item"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/zeroing_setting" />

            <TextView
                android:id="@+id/tv_targetSwitching"
                style="@style/setting_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/target_swiching" />
            <TextView
                android:id="@+id/tv_units"
                style="@style/setting_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/units" />

            <TextView
                android:id="@+id/tv_indoor_outdoor"
                style="@style/setting_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/indoor_outdoor" />
            <TextView
                android:id="@+id/tv_personal_info"
                style="@style/setting_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/personal_info" />
            <TextView
                android:id="@+id/tv_marker_menu"
                style="@style/setting_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/marker_menu" />
            <TextView
                android:id="@+id/tv_marker_color"
                style="@style/setting_item"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/marker_color" />
            <TextView
                android:id="@+id/tv_marker_shape"
                style="@style/setting_item"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/marker_shape" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>

