<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroung_color"
    android:orientation="vertical"
    tools:context=".activity.MarkerShapeActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:fontFamily="@font/open_sans_bold"
        android:gravity="center"
        android:text="@string/marker_shape"
        android:textColor="@color/title_color"
        android:textSize="@dimen/title_size" />

    <RadioGroup
        android:id="@+id/rg_marker_shape"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rb_circle"
            style="@style/setting_radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/circle" />

        <RadioButton
            android:id="@+id/rb_rectangle"
            style="@style/setting_radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"
            android:text="@string/rectangle" />

        <RadioButton
            android:id="@+id/rb_pentagon"
            style="@style/setting_radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"
            android:text="@string/pentagon" />

        <RadioButton
            android:id="@+id/rb_oval"
            style="@style/setting_radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"
            android:text="@string/oval" />

        <RadioButton
            android:id="@+id/rb_star"
            style="@style/setting_radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"
            android:text="@string/star" />
    </RadioGroup>

</LinearLayout>